# PILOT

./: .gitignore  CMakeLists.txt  DESCRIPTION  NAMESPACE  README.md  benchmark.py  benchmark_config.py  benchmark_results.py  benchmark_results2.py  benchmark_util.py  best_tree_experiment.py  cpf_hp_tuning.py  download_data.py  example.py  experiment.py  lasso_ensemble.py  linear_experiment.py  n_tree_experiment.py  paperplots.py  pilot_benchmark_powertransform_2  pilot_wrapper.cpp  requirements.txt  test.py  tree.cpp  tree.h
Output/benchmark_power_transform_v1/: results.csv
Output/benchmark_power_transform_v2/: results.csv
Output/benchmark_v1/: results.csv
Output/benchmark_v2/: results.csv
Output/best_tree_experiment/: results.csv
Output/cpf_hp_tuning/: results.csv
Output/cpf_hp_tuning2/: results.csv
Output/cpf_hp_tuning_10/: results.csv
Output/cpf_hp_tuning_492/: results.csv
Output/cpilot_benchmark/: results.csv
Output/cpilot_forest_benchmark/: results.csv
Output/cpilot_forest_benchmark_v11_linear_models/: results.csv
Output/cpilot_forest_benchmark_v2/: results.csv
R/: PILOT.R  RaFFLE.R
man/: pilot-package.Rd  pilot.Rd  plot.PILOT.Rd  plot.RAFFLE.Rd  predict.PILOT.Rd  predict.RAFFLE.Rd  print.PILOT.Rd  print.RAFFLE.Rd  raffle.Rd
notebooks/: compute_time_by_node.ipynb  plain_python_profiling.ipynb  profile_results
pilot/: Pilot.py  Tree.py  c_ensemble.py  ensemble.py  pypilot.py
src/: RcppExports.cpp  forest.cpp  forest.h  forest_export.cpp  tree.cpp  tree.h  tree_export.cpp
vignettes/: pilot_examples.Rmd
(+14 files in other folders)
